Fixe some layout.

--- a/wiki/InstallerElixir.wiki
+++ b/wiki/InstallerElixir.wiki
@@ -35,17 +35,26 @@ Ensuite, dans l'ordre suivant :
 
 Il va falloir construire les differentes bibliothèques comme suit.
  # Décompresser les différents paquets sources.
- # Allez dans le répertoire racine du paquet décompressé.
- # Exécuté {{{ ./configure }}}
- # Vérifié qu'il a bien trouvé les dépendences
- # Exécuté {{{ make }}}
- # Installé le tout avec {{{ sudo make install }}}
+ # Aller dans le répertoire racine du paquet décompressé.
+ # Exécuter
+{{{
+ ./configure
+}}}
+ # Vérifier qu'il a bien trouvé les dépendences
+ # Exécuter
+{{{
+make
+}}}
+ # Installé le tout avec
+{{{
+sudo make install
+}}}
 
 Maintenant que les EFL sont installe passont a SpiderMonkey. Il se peut que vous SpiderMonkey soit deja installé (C'est la bibliothèque JavaScript de Firefox tout de même), auquel car le répertoire /usr/include/mozjs/ doit être rempli de divers headers.
 
 Si ce n'est pas le cas, il faut donc compiler et installer [https://developer.mozilla.org/en/Building_only_SpiderMonkey SpiderMonkey].
 
- # décompresser la dernière version de SpiderMonkey (la version utilisé pour ce tutorial est la 1.8.0-RC1).
+ # Décompresser la dernière version de SpiderMonkey (la version utilisé pour ce tutorial est la 1.8.0-RC1).
  # Allez dans le sous repertoire js/src.
  # Exécuter {{{ make JS_THREADSAFE=1 JS_DIST=/usr -f Makefile.ref }}} (Il faut vous assurer avant que vous avez bien un répertoire `/usr/include/nspr/` installe par la libnspr).
  # Exécuter ensuite la liste de commande suivante en étant root :
