--- a/wiki/EFLIntro.wiki
+++ b/wiki/EFLIntro.wiki
@@ -22,10 +22,11 @@ La version 17 de Enlightenment est un "desktop shell". L'infrastructure de ce wi
 Ces bibliothèques qui se devait d'être efficace en utilisant aux mieux le matériel quelque soit les conditions, se sont révélé être tout a fait utilisable pour l'écriture d'applications généraliste. Permettant même d'écrire des applications plus graphique sans avoir besoin d'une machine de dernière génération. Ces bibliotheques arrivant à tirer le meilleur du matériel, elles sont naturellement utilisée dans des projets embarqués avec du matériel beaucoup plus limité que nos PC de bureau.
 
 Ainsi les projets suivant utilisent les EFL :
-  * Canola (Nokia N810)
-  * OpenMoko
-  * OpenInkpot (e-book)
-  * GeexBox
+  * [http://openbossa.indt.org/canola/ Canola] (Nokia N810)
+  * [http://wiki.openmoko.org/wiki/Main_Page OpenMoko]
+  * [http://openinkpot.org/ OpenInkpot] (e-book)
+  * [http://geexbox.org/en/index.html GeexBox] (lecteur multimédia)
+  * [http://www.calaos.fr/cms/index.php Calaos] (solution domotique)
 
 = Les bibliothèques ==
 
