--- a/wiki/EFLIntro.wiki
+++ b/wiki/EFLIntro.wiki
@@ -2,18 +2,19 @@
 
 = Introduction =
 
-Ce document va essayer de presenter les bibliotheques du projet Enlightenment. Il se base sur les documents suivant [http://fr.enlightenment.org/wiki/wiki/] et mes connaissances personnelles sur le sujet.
+Ce document présente succinctement les bibliothèques du projet Enlightenment. 
+Il se base sur les documents suivants [http://fr.enlightenment.org/wiki/wiki/] et mes connaissances personnelles sur le sujet.
 
 = Bref historique =
 
-Retour en 1999, le gestionnaire de fenêtres Enlightenment (version 16 d'alors)est déja trés en avance sur son temps et offre une interface utilisateur trés eye-cadies tout en conservant la convivialité.
+Retour en 1999: le gestionnaire de fenêtres Enlightenment (version 16), très en avance sur son temps, offre une interface utilisateur très "eye-cadies", tout en conservant la convivialité.
 
-Plusieurs effets graphiques (fenêtres coulissantes, animation d'ombrage, et the ripples and waves ) ont été tout à fait révolutionnaire pour un gestionnaire de fenêtre. Avec la possibilité de rajouter différente thémes.
+Plusieurs effets graphiques (fenêtres coulissantes, animation d'ombrage, et the ripples and waves ) ont été tout à fait révolutionnaire pour un gestionnaire de fenêtre. Avec la possibilité de rajouter différents thèmes.
 
-Alors que la plupart des applications, suportant le principe du théme ne permet que de modifier la couleur des interfaces, Enlightenment pouvait personnaliser tout.
+Alors que la plupart des applications, suportant le principe du thème ne permet que de modifier la couleur des interfaces, Enlightenment pouvait personnaliser tout.
 Les thèmes pourraient être complètement différents suivant l'aspect que l'on regarde. Plusieurs thèmes ont été tellement complexe que finalement faire des Enlightenment ressemble à différents systèmes (Mac OS Aqua, BeOS).
 
-Enlightenment a aussi été à un moment intégré à Gnome. Alors que Gnome a progressé depuis lors et vient maintenant avec son propre gestionnaire de fenêtres (Metacity), le fait est que Enlightenment a été installé sur de nombreux ordinateurs de bureau à l'époque. La version 16 est toujours la dernière version stable d'Enlightenment. Cela signifie que Enlightenment V16 est un gestionnaire de fenêtres très stable. Depuis ses besoins en ressources sont à peu près la même, ce qui semble être un poids lourd des gestionnaires de fenêtres se révèle être très léger.
+Enlightenment a aussi été à un moment intégré à Gnome. Alors que Gnome a progressé depuis et vient maintenant avec son propre gestionnaire de fenêtres (Metacity), le fait est que Enlightenment a été installé sur de nombreux ordinateurs de bureau à l'époque. La version 16 est toujours la dernière version stable d'Enlightenment. Cela signifie que Enlightenment V16 est un gestionnaire de fenêtres très stable. Depuis ses besoins en ressources sont à peu près les même, ce qui semble être un poids lourd des gestionnaires de fenêtres se révèle être très léger.
 
 Alors, pourquoi n'avons-nous pas une nouvelle version d'Enlightenment aujourd'hui? Et pourquoi la version de développement (V17) n'a pas encore été sortie en version stable, après tant d'années ?
 
